# k2hdkc

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  CNAME  ChangeLog  Makefile.am  README  README.md  autogen.sh  build.md  buildja.md  configure.ac  developer.md  developerja.md  environments.md  environmentsja.md  feature.md  featureja.md  home.md  homeja.md  index.md  indexja.md  k2hdkclinetool.md  k2hdkclinetoolja.md  make_rev.sh  tools.md  toolsja.md  usage.md  usageja.md
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  imagetypevars.sh  ostypevars.sh
_layouts/: default.html
buildutils/: APKBUILD.templ.in  Dockerfile.templ.in  Makefile.am  control.in  copyright.in  debian_build.sh  debian_build_copy.conf  k2hdkc-service-helper  k2hdkc-service-helper.conf  k2hdkc.ini.example  k2hdkc.install  k2hdkc.service  k2hdkc.spec.in  override.conf.k2hdkc_example  rules.in
docs/: Makefile.am  k2hdkc.1  k2hdkclinetool.1
lib/: Makefile.am  k2hdkc.cc  k2hdkc.h  k2hdkccom.h  k2hdkccomaddsubkey.cc  k2hdkccomaddsubkey.h  k2hdkccomaddsubkeys.cc  k2hdkccomaddsubkeys.h  k2hdkccombase.cc  k2hdkccombase.h  k2hdkccomcasget.cc  k2hdkccomcasget.h  k2hdkccomcasincdec.cc  k2hdkccomcasincdec.h  k2hdkccomcasinit.cc  k2hdkccomcasinit.h  k2hdkccomcasset.cc  k2hdkccomcasset.h  k2hdkccomdbg.h  k2hdkccomdel.cc  k2hdkccomdel.h  k2hdkccomdelsubkey.cc  k2hdkccomdelsubkey.h  k2hdkccomdelsubkeys.cc  k2hdkccomdelsubkeys.h  k2hdkccomget.cc  k2hdkccomget.h  k2hdkccomgetattr.cc  k2hdkccomgetattr.h  k2hdkccomgetattrs.cc  k2hdkccomgetattrs.h  k2hdkccomgetdirect.cc  k2hdkccomgetdirect.h  k2hdkccomgetsubkeys.cc  k2hdkccomgetsubkeys.h  k2hdkccomk2hstate.cc  k2hdkccomk2hstate.h  k2hdkccommon.h  k2hdkccomnum.cc  k2hdkccomnum.h  (+34 more)
src/: Makefile.am  k2hdkccntrl.cc  k2hdkccntrl.h  k2hdkcconfparser.cc  k2hdkcconfparser.h  k2hdkcmain.cc  k2hdkcopts.cc  k2hdkcopts.h
tests/: Makefile.am  k2hdkclinetool.cc  k2hdkclinetool.cmd  k2hdkclinetool_exit.cmd  test.sh  test_json_string.data  test_server.ini  test_server.json  test_server.yaml  test_slave.ini  test_slave.json  test_slave.yaml  test_trans_server.ini  test_trans_server.json  test_trans_server.yaml  test_trans_slave.ini  test_trans_slave.json  test_trans_slave.yaml
